--- a/portfolio.html
+++ b/portfolio.html
@@ -37,63 +37,63 @@
     <ul class="projects">
         <li>
             <a class="project" href="">
-            <img src="/images/technokriak.jpg" alt="Технокряк" width="370" height="294">
+            <img src="./images/technokriak.jpg" alt="Технокряк" width="370" height="294">
             <h2>Технокряк</h2>
             <p>Веб-сайт</p>
             </a>
         </li>
         <li>
             <a href="">
-                <img src="/images/poster-new-orlean-vs-golden-star.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                <img src="./images/poster-new-orlean-vs-golden-star.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
                 <h2>Постер New Orlean vs Golden Star</h2>
                 <p>Дизайн</p>
             </a>
         </li>
         <li>
             <a href="">
-                <img src="/images/restoran-seafood.jpg" alt="Ресторан Seafood" width="370" height="294">
+                <img src="./images/restoran-seafood.jpg" alt="Ресторан Seafood" width="370" height="294">
                 <h2>Ресторан Seafood</h2>
                 <p>Додаток</p>
             </a>
         </li>
         <li>
             <a href="">
-                <img src="/images/proekt-prime.jpg" alt="Проєкт Prime" width="370" height="294">
+                <img src="./images/proekt-prime.jpg" alt="Проєкт Prime" width="370" height="294">
                 <h2>Проєкт Prime</h2>
                 <p>Маркетинг</p>
             </a>
         </li>
         <li>
             <a href="">
-                <img src="/images/proekt-boxes.jpg" alt="Проєкт Boxes" width="370" height="294">
+                <img src="./images/proekt-boxes.jpg" alt="Проєкт Boxes" width="370" height="294">
                 <h2>Проєкт Boxes</h2>
                 <p>Додаток</p>
             </a>
         </li>
         <li>
             <a href="">
-                <img src="/images/inspiration-has-no-borders.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                <img src="./images/inspiration-has-no-borders.jpg" alt="Inspiration has no Borders" width="370" height="294">
                 <h2>Inspiration has no Borders</h2>
                 <p>Веб-сайт</p>
             </a>
         </li>
         <li>
             <a href="">
-                <img src="/images/vydannia-limited-edition.jpg" alt="Видання Limited Edition" width="370" height="294">
+                <img src="./images/vydannia-limited-edition.jpg" alt="Видання Limited Edition" width="370" height="294">
                 <h2>Видання Limited Edition</h2>
                 <p>Дизайн</p>
             </a>
         </li>
         <li>
             <a href="">
-                <img src="/images/proekt-lab.jpg" alt="Проєкт LAB" width="370" height="294">
+                <img src="./images/proekt-lab.jpg" alt="Проєкт LAB" width="370" height="294">
                 <h2>Проєкт LAB</h2>
                 <p>Маркетинг</p>
             </a>
         </li>
         <li>
             <a href="">
-                <img src="/images/growing-bussines.jpg" alt="Growing Business" width="370" height="294">
+                <img src="./images/growing-bussines.jpg" alt="Growing Business" width="370" height="294">
                 <h2>Growing Business</h2>
                 <p>Додаток</p>
             </a>
