--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
@@ -27,11 +37,11 @@
 
     <h1>Сторінка Портфоліо</h1>
     <ul class="filter">
-        <li><a href="" class="button-portfolio">Усі</a></li>
-        <li><a href="" class="button-portfolio">Веб-сайти</a></li>
-        <li><a href="" class="button-portfolio">Додатки</a></li>
-        <li><a href="" class="button-portfolio">Дизайн</a></li>
-        <li><a href="" class="button-portfolio">Маркетинг</a></li>
+        <li><button class="button all" type="button">Усі</button></li>
+        <li><button class="button" type="button">Веб-сайти</button></li>
+        <li><button class="button" type="button">Додатки</button></li>
+        <li><button class="button" type="button">Дизайн</button></li>
+        <li><button class="button" type="button">Маркетинг</button></li>
     </ul>
 
     <ul class="projects">
@@ -102,10 +112,10 @@
 
     <footer>
         <a class="logo" href="/"><span class="logo-blue">Web</span>Studio</a>
-        <address>
-            м. Київ, пр-т Лесі Українки, 26<br />
-            info@devstudio.com<br />
-            +38 096 111 11 11
+        <address class="address">
+            <p>м. Київ, пр-т Лесі Українки, 26</p>
+            <p>info@devstudio.com</p>
+            <p>+38 096 111 11 11</p>
         </address>
     </footer>
 
