--- a/portfolio.html
+++ b/portfolio.html
@@ -20,28 +20,27 @@
 </head>
 
 <body>
+
     <header>
         <nav>
             <a class="logo" href="/"><span class="logo-blue">Web</span>Studio</a>
             <ul class="list site-nav">
                 <li><a class="link" href="./index.html">Студія</a></li>
-                <li><a class="link current" href="./portfolio.html">Портфоліо</a></li>
+                <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
                 <li><a class="link" href="">Контакти</a></li>
             </ul>
         </nav>
-        <address>
-            <a class="nav-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="nav-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
-        </address>
+        <a class="nav-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="nav-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
 
     <h1>Сторінка Портфоліо</h1>
     <ul class="filter">
         <li><button class="button all" type="button">Усі</button></li>
-        <li><button class="button" type="button">Веб-сайти</button></li>
-        <li><button class="button" type="button">Додатки</button></li>
-        <li><button class="button" type="button">Дизайн</button></li>
-        <li><button class="button" type="button">Маркетинг</button></li>
+        <li><button class="button all-sites" type="button">Веб-сайти</button></li>
+        <li><button class="button attachments" type="button">Додатки</button></li>
+        <li><button class="button design" type="button">Дизайн</button></li>
+        <li><button class="button marketing" type="button">Маркетинг</button></li>
     </ul>
 
     <ul class="projects">
