--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="header">
         <div class="container">
             <nav>
-                <a class="logo" href="/"><span class="logo-blue">Web</span>Studio</a>
+                <a class="logo" href="/" lang="en"><span class="logo-blue" lang="en">Web</span>Studio</a>
                 <ul class="list site-nav">
                     <li><a class="link" href="./index.html">Студія</a></li>
                     <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
@@ -30,8 +30,8 @@
             </nav>
         </div>
         <div class="container">
-            <a class="nav-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="nav-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contacts" href="tel:+380961111111">+38 096 111 11 11</a>
         </div>
     </header>
     <main>
@@ -69,7 +69,7 @@
     <section class="section">
         <h2 class="section-title">Чим ми займаємося</h2>
         <ul class="list">
-            <li><img src="./images/img.jpg" alt="Друкуєм на клавіатурі" width="370" height="294"></li>
+            <li><img src="./images/img.jpg" alt="Друкує на клавіатурі" width="370" height="294"></li>
             <li><img src="./images/img1.jpg" alt="Робота на компютері" width="370" height="294"></li>
             <li><img src="./images/img2.jpg" alt="Робота на планшеті" width="370" height="294"></li>
         </ul>
@@ -81,29 +81,29 @@
             <li>
                 <img src="./images/igor-demianenko.jpg" alt="Ігор Дем`яненко" width="270" height="260"/>
                 <h3 class="team">Ігор Дем&#39;яненко</h3>
-                <p class="team-profession">Product Designer</p>
+                <p class="team-profession" lang="en">Product Designer</p>
             </li>
             <li>
                 <img src="./images/olga-repina.jpg" alt="Ольга Рєпіна" width="270" height="260"/>
                 <h3 class="team">Ольга Рєпіна</h3>
-                <p class="team-profession">Frontend Developer</p>
+                <p class="team-profession" lang="en">Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/mykola-tarasov.jpg" alt="Микола Тарасов" width="270" height="260"/>
                 <h3 class="team">Микола Тарасов</h3>
-                <p class="team-profession">Marketing</p>
+                <p class="team-profession" lang="en">Marketing</p>
             </li>
             <li>
                 <img src="./images/mychaylo-jermakov.jpg" alt="Михайло Єрмаков" width="270" height="260"/>
                 <h3 class="team">Михайло Єрмаков</h3>
-                <p class="team-profession">UI Designer</p>
+                <p class="team-profession" lang="en">UI Designer</p>
             </li>
         </ul>
     </section>
     </main>
     
     <footer>
-        <a class="logo" href="/"><span class="logo-blue">Web</span>Studio</a>
+        <a class="logo" href="/" lang="en"><span class="logo-blue" lang="en">Web</span>Studio</a>
         <address class="address">
             <p>м. Київ, пр-т Лесі Українки, 26</p>
             <p>info@devstudio.com</p>
