--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
 
     <header>
         <nav>
-            <a class="logo" href="/"><span class="logo-blue">Web</span>Studio</a>
+            <a class="logo" href="/" lang="en"><span class="logo-blue" lang="en">Web</span>Studio</a>
             <ul class="list site-nav">
                 <li><a class="link" href="./index.html">Студія</a></li>
                 <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
@@ -54,63 +54,63 @@
         <li>
             <a href="">
                 <img src="./images/poster-new-orlean-vs-golden-star.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                <h2>Постер New Orlean vs Golden Star</h2>
+                <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                 <p>Дизайн</p>
             </a>
         </li>
         <li>
             <a href="">
                 <img src="./images/restoran-seafood.jpg" alt="Ресторан Seafood" width="370" height="294">
-                <h2>Ресторан Seafood</h2>
+                <h2>Ресторан <span lang="en">Seafood</span></h2>
                 <p>Додаток</p>
             </a>
         </li>
         <li>
             <a href="">
                 <img src="./images/proekt-prime.jpg" alt="Проєкт Prime" width="370" height="294">
-                <h2>Проєкт Prime</h2>
+                <h2>Проєкт <span lang="en">Prime</span></h2>
                 <p>Маркетинг</p>
             </a>
         </li>
         <li>
             <a href="">
                 <img src="./images/proekt-boxes.jpg" alt="Проєкт Boxes" width="370" height="294">
-                <h2>Проєкт Boxes</h2>
+                <h2>Проєкт <span lang="en">Boxes</span></h2>
                 <p>Додаток</p>
             </a>
         </li>
         <li>
             <a href="">
                 <img src="./images/inspiration-has-no-borders.jpg" alt="Inspiration has no Borders" width="370" height="294">
-                <h2>Inspiration has no Borders</h2>
+                <h2 lang="en">Inspiration has no Borders</h2>
                 <p>Веб-сайт</p>
             </a>
         </li>
         <li>
             <a href="">
                 <img src="./images/vydannia-limited-edition.jpg" alt="Видання Limited Edition" width="370" height="294">
-                <h2>Видання Limited Edition</h2>
+                <h2>Видання <span lang="en">Limited Edition</span></h2>
                 <p>Дизайн</p>
             </a>
         </li>
         <li>
             <a href="">
                 <img src="./images/proekt-lab.jpg" alt="Проєкт LAB" width="370" height="294">
-                <h2>Проєкт LAB</h2>
+                <h2>Проєкт <span lang="en">LAB</span></h2>
                 <p>Маркетинг</p>
             </a>
         </li>
         <li>
             <a href="">
                 <img src="./images/growing-bussines.jpg" alt="Growing Business" width="370" height="294">
-                <h2>Growing Business</h2>
+                <h2 lang="en">Growing Business</h2>
                 <p>Додаток</p>
             </a>
         </li>
     </ul>
 
     <footer>
-        <a class="logo" href="/"><span class="logo-blue">Web</span>Studio</a>
+        <a class="logo" href="/" lang="en"><span class="logo-blue" lang="en">Web</span>Studio</a>
         <address class="address">
             <p>м. Київ, пр-т Лесі Українки, 26</p>
             <p>info@devstudio.com</p>
