--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,17 +21,19 @@
     <header class="header">
         <div class="container">
             <nav>
-                <a class="logo" href="/" lang="en"><span class="logo-blue" lang="en">Web</span>Studio</a>
+                <a class="logo" href="./index.html" lang="en"><span class="logo-blue" lang="en">Web</span>Studio</a>
                 <ul class="list site-nav">
-                    <li><a class="link" href="./index.html">Студія</a></li>
+                    <li><a class="link" href="#">Студія</a></li>
                     <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
-                    <li><a class="link" href="">Контакти</a></li>
+                    <li><a class="link" href="#">Контакти</a></li>
                 </ul>
             </nav>
         </div>
         <div class="container">
-            <a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="contacts" href="tel:+380961111111">+38 096 111 11 11</a>
+            <ul>
+                <li><a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
         </div>
     </header>
     <main>
@@ -103,11 +105,11 @@
     </main>
     
     <footer>
-        <a class="logo" href="/" lang="en"><span class="logo-blue" lang="en">Web</span>Studio</a>
+        <a class="logo" href="./index.html" lang="en"><span class="logo-blue" lang="en">Web</span>Studio</a>
         <address class="address">
-            <p>м. Київ, пр-т Лесі Українки, 26</p>
-            <p>info@devstudio.com</p>
-            <p>+38 096 111 11 11</p>
+            <a href="https://goo.gl/maps/JmQGZZptx1eftx2k7">м. Київ, пр-т Лесі Українки, 26</a>
+            <a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contacts" href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
     </footer>
 </body>
