--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,7 @@
             <ul class="list site-nav">
                 <li><a class="link" href="./index.html">Студія</a></li>
                 <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
-                <li><a class="link" href="">Контакти</a></li>
+                <li><a class="link" href="#">Контакти</a></li>
             </ul>
         </nav>
         <a class="nav-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -112,9 +112,9 @@
     <footer>
         <a class="logo" href="/" lang="en"><span class="logo-blue" lang="en">Web</span>Studio</a>
         <address class="address">
-            <p>м. Київ, пр-т Лесі Українки, 26</p>
-            <p>info@devstudio.com</p>
-            <p>+38 096 111 11 11</p>
+            <a href="https://goo.gl/maps/JmQGZZptx1eftx2k7">м. Київ, пр-т Лесі Українки, 26</a>
+            <a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contacts" href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
     </footer>
 
