--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
             <nav>
                 <a class="logo" href="./index.html" lang="en"><span class="logo-blue" lang="en">Web</span>Studio</a>
                 <ul class="list site-nav">
@@ -28,25 +27,18 @@
                     <li><a class="link" href="#">Контакти</a></li>
                 </ul>
             </nav>
-        </div>
-        <div class="container">
             <ul>
                 <li><a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </div>
     </header>
     <main>
 <!-- Герой -->
         <section class="hero">
-            <div class="container">
                 <h1 class="heading">Ефективні рішення для вашого бізнесу</h1>
                 <button class="button order" type="button">Замовити послугу</button>
-            </div>
         </section>
-
     <section>
-        <div class="container">
         <ul class="feature-list">
             <li>
             <h3 class="title uppercase">Увага до деталей</h3>
@@ -65,7 +57,6 @@
                 <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
         </ul>
-        </div>
     </section>
 
     <section class="section">
@@ -107,7 +98,7 @@
     <footer>
         <a class="logo" href="./index.html" lang="en"><span class="logo-blue" lang="en">Web</span>Studio</a>
         <address class="address">
-            <a href="https://goo.gl/maps/JmQGZZptx1eftx2k7">м. Київ, пр-т Лесі Українки, 26</a>
+            <a href="https://goo.gl/maps/JmQGZZptx1eftx2k7" target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a>
             <a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a class="contacts" href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
