--- a/portfolio.html
+++ b/portfolio.html
@@ -112,7 +112,7 @@
     <footer>
         <a class="logo" href="/" lang="en"><span class="logo-blue" lang="en">Web</span>Studio</a>
         <address class="address">
-            <a href="https://goo.gl/maps/JmQGZZptx1eftx2k7">м. Київ, пр-т Лесі Українки, 26</a>
+            <a href="https://goo.gl/maps/JmQGZZptx1eftx2k7" target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a>
             <a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a class="contacts" href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
