--- a/index.html
+++ b/index.html
@@ -18,62 +18,67 @@
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
-    <header class="header">
-            <nav>
-                <a class="logo" href="./index.html" lang="en"><span class="logo-blue" lang="en">Web</span>Studio</a>
-                <ul class="list site-nav">
-                    <li><a class="link" href="#">Студія</a></li>
-                    <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
-                    <li><a class="link" href="#">Контакти</a></li>
-                </ul>
-            </nav>
+    <header>
+        <nav class="site-nav">
+            <a class="logo" href="./index.html" lang="en"><span class="logo-blue" lang="en">Web</span>Studio</a>
             <ul>
-                <li><a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a class="menu" href="./index.html">Студія</a></li>
+                <li><a class="menu" href="./portfolio.html">Портфоліо</a></li>
+                <li><a class="menu" href="#">Контакти</a></li>
             </ul>
-    </header>
-    <main>
-<!-- Герой -->
-        <section class="hero">
-                <h1 class="heading">Ефективні рішення для вашого бізнесу</h1>
-                <button class="button order" type="button">Замовити послугу</button>
+        </nav>
+        <section class="contacts">
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
         </section>
-    <section>
-        <ul class="feature-list">
+    </header>
+
+    <main>
+    <section class="hero">
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
+    </section>
+
+    <section class="feature-list">
+        <!-- Пишемо H2 але на сайті не показуємо -->
+        <h2 hidden>Наші переваги</h2>
+        <ul>
             <li>
-            <h3 class="title uppercase">Увага до деталей</h3>
+            <h3 class="title">Увага до деталей</h3>
             <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
             <li>
-                <h3 class="title uppercase">Пунктуальність</h3>
+                <h3 class="title">Пунктуальність</h3>
                 <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
             <li>
-                <h3 class="title uppercase">Планування</h3>
+                <h3 class="title">Планування</h3>
                 <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
             <li>
-                <h3 class="title uppercase">Сучасні технології</h3>
+                <h3 class="title">Сучасні технології</h3>
                 <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
         </ul>
     </section>
 
-    <section class="section">
-        <h2 class="section-title">Чим ми займаємося</h2>
-        <ul class="list">
+    <section class="section-work">
+        <h2>Чим ми займаємося</h2>
+        <ul>
             <li><img src="./images/img.jpg" alt="Друкує на клавіатурі" width="370" height="294"></li>
             <li><img src="./images/img1.jpg" alt="Робота на компютері" width="370" height="294"></li>
             <li><img src="./images/img2.jpg" alt="Робота на планшеті" width="370" height="294"></li>
         </ul>
     </section>
 
-    <section class="section">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="list feature-list">
+    <section class="our-team">
+        <h2>Наша команда</h2>
+        <ul>
             <li>
                 <img src="./images/igor-demianenko.jpg" alt="Ігор Дем`яненко" width="270" height="260"/>
-                <h3 class="team">Ігор Дем&#39;яненко</h3>
+                <h3>Ігор Дем&#39;яненко</h3>
                 <p class="team-profession" lang="en">Product Designer</p>
             </li>
             <li>
@@ -98,9 +103,12 @@
     <footer>
         <a class="logo" href="./index.html" lang="en"><span class="logo-blue" lang="en">Web</span>Studio</a>
         <address class="address">
-            <a href="https://goo.gl/maps/JmQGZZptx1eftx2k7" target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a>
-            <a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="contacts" href="tel:+380961111111">+38 096 111 11 11</a>
+            <ul>
+                <li><a href="https://goo.gl/maps/JmQGZZptx1eftx2k7" target="_blank" rel="noreferrer noopener noopenet">м. Київ, пр-т Лесі
+                    Українки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
         </address>
     </footer>
 </body>
