--- a/portfolio.html
+++ b/portfolio.html
@@ -29,95 +29,97 @@
                 <li><a class="menu" href="#">Контакти</a></li>
             </ul>
         </nav>
-        <section class="contacts">
+        <div class="contact">
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </section>
+        </div>
     </header>
 
-    <h1 hidden>Сторінка Портфоліо</h1>
-
-    <section class="filter">
-        <ul>
-            <li><button type="button">Усі</button></li>
-            <li><button type="button">Веб-сайти</button></li>
-            <li><button type="button">Додатки</button></li>
-            <li><button type="button">Дизайн</button></li>
-            <li><button type="button">Маркетинг</button></li>
-        </ul>
-    </section>
-
-    <section class="projects">
-        <ul>
-            <li>
-                <a class="project" href="#" target="_blank" rel="noreferrer noopener noopenet">
-                    <img src="./images/technokriak.jpg" alt="Технокряк" width="370" height="294">
-                    <h2>Технокряк</h2>
-                    <p>Веб-сайт</p>
-                </a>
-            </li>
-            <li>
-                <a href="#" target="_blank" rel="noreferrer noopener noopenet">
-                    <img src="./images/poster-new-orlean-vs-golden-star.jpg" alt="Постер New Orlean vs Golden Star" width="370"
-                        height="294">
-                    <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-                    <p>Дизайн</p>
-                </a>
-            </li>
-            <li>
-                <a href="#" target="_blank" rel="noreferrer noopener noopenet">
-                    <img src="./images/restoran-seafood.jpg" alt="Ресторан Seafood" width="370" height="294">
-                    <h2>Ресторан <span lang="en">Seafood</span></h2>
-                    <p>Додаток</p>
-                </a>
-            </li>
-            <li>
-                <a href="#" target="_blank" rel="noreferrer noopener noopenet">
-                    <img src="./images/proekt-prime.jpg" alt="Проєкт Prime" width="370" height="294">
-                    <h2>Проєкт <span lang="en">Prime</span></h2>
-                    <p>Маркетинг</p>
-                </a>
-            </li>
-            <li>
-                <a href="#" target="_blank" rel="noreferrer noopener noopenet">
-                    <img src="./images/proekt-boxes.jpg" alt="Проєкт Boxes" width="370" height="294">
-                    <h2>Проєкт <span lang="en">Boxes</span></h2>
-                    <p>Додаток</p>
-                </a>
-            </li>
-            <li>
-                <a href="#" target="_blank" rel="noreferrer noopener noopenet">
-                    <img src="./images/inspiration-has-no-borders.jpg" alt="Inspiration has no Borders" width="370"
-                        height="294">
-                    <h2 lang="en">Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
-                </a>
-            </li>
-            <li>
-                <a href="#" target="_blank" rel="noreferrer noopener noopenet">
-                    <img src="./images/vydannia-limited-edition.jpg" alt="Видання Limited Edition" width="370" height="294">
-                    <h2>Видання <span lang="en">Limited Edition</span></h2>
-                    <p>Дизайн</p>
-                </a>
-            </li>
-            <li>
-                <a href="#" target="_blank" rel="noreferrer noopener noopenet">
-                    <img src="./images/proekt-lab.jpg" alt="Проєкт LAB" width="370" height="294">
-                    <h2>Проєкт <span lang="en">LAB</span></h2>
-                    <p>Маркетинг</p>
-                </a>
-            </li>
-            <li>
-                <a href="#" target="_blank" rel="noreferrer noopener noopenet">
-                    <img src="./images/growing-bussines.jpg" alt="Growing Business" width="370" height="294">
-                    <h2 lang="en">Growing Business</h2>
-                    <p>Додаток</p>
-                </a>
-            </li>
-        </ul>
-    </section>
+    <main>
+        <h1 hidden>Сторінка Портфоліо</h1>
+        <section class="sorting">
+            <h2 hidden>Сортування проєктів</h2>
+            <ul>
+                <li><button type="button">Усі</button></li>
+                <li><button type="button">Веб-сайти</button></li>
+                <li><button type="button">Додатки</button></li>
+                <li><button type="button">Дизайн</button></li>
+                <li><button type="button">Маркетинг</button></li>
+            </ul>
+        </section>
+        
+        <section class="projects">
+            <ul>
+                <li>
+                    <a class="project" href="#" target="_blank" rel="noreferrer noopener noopenet">
+                        <img src="./images/technokriak.jpg" alt="Технокряк" width="370" height="294">
+                        <h2>Технокряк</h2>
+                        <p>Веб-сайт</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" target="_blank" rel="noreferrer noopener noopenet">
+                        <img src="./images/poster-new-orlean-vs-golden-star.jpg" alt="Постер New Orlean vs Golden Star"
+                            width="370" height="294">
+                        <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                        <p>Дизайн</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" target="_blank" rel="noreferrer noopener noopenet">
+                        <img src="./images/restoran-seafood.jpg" alt="Ресторан Seafood" width="370" height="294">
+                        <h2>Ресторан <span lang="en">Seafood</span></h2>
+                        <p>Додаток</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" target="_blank" rel="noreferrer noopener noopenet">
+                        <img src="./images/proekt-prime.jpg" alt="Проєкт Prime" width="370" height="294">
+                        <h2>Проєкт <span lang="en">Prime</span></h2>
+                        <p>Маркетинг</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" target="_blank" rel="noreferrer noopener noopenet">
+                        <img src="./images/proekt-boxes.jpg" alt="Проєкт Boxes" width="370" height="294">
+                        <h2>Проєкт <span lang="en">Boxes</span></h2>
+                        <p>Додаток</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" target="_blank" rel="noreferrer noopener noopenet">
+                        <img src="./images/inspiration-has-no-borders.jpg" alt="Inspiration has no Borders" width="370"
+                            height="294">
+                        <h2 lang="en">Inspiration has no Borders</h2>
+                        <p>Веб-сайт</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" target="_blank" rel="noreferrer noopener noopenet">
+                        <img src="./images/vydannia-limited-edition.jpg" alt="Видання Limited Edition" width="370" height="294">
+                        <h2>Видання <span lang="en">Limited Edition</span></h2>
+                        <p>Дизайн</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" target="_blank" rel="noreferrer noopener noopenet">
+                        <img src="./images/proekt-lab.jpg" alt="Проєкт LAB" width="370" height="294">
+                        <h2>Проєкт <span lang="en">LAB</span></h2>
+                        <p>Маркетинг</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" target="_blank" rel="noreferrer noopener noopenet">
+                        <img src="./images/growing-bussines.jpg" alt="Growing Business" width="370" height="294">
+                        <h2 lang="en">Growing Business</h2>
+                        <p>Додаток</p>
+                    </a>
+                </li>
+            </ul>
+        </section>
+    </main>
     
 
     <footer>
