--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                 <li><a class="menu" href="#">Контакти</a></li>
             </ul>
         </nav>
-        <section class="contacts">
+        <div class="contact">
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </section>
+        </div>
     </header>
 
     <main>
