--- a/index.html
+++ b/index.html
@@ -72,23 +72,23 @@
 
     <section class="our-team">
         <h2 class="title">Наша команда</h2>
-        <ul class="list">
-            <li>
+        <ul>
+            <li class="list">
                 <img src="./images/igor-demianenko.jpg" alt="Ігор Дем`яненко" width="270" height="260"/>
                 <h3 class="team">Ігор Дем&#39;яненко</h3>
                 <p class="team-profession" lang="en">Product Designer</p>
             </li>
-            <li>
+            <li class="list">
                 <img src="./images/olga-repina.jpg" alt="Ольга Рєпіна" width="270" height="260"/>
                 <h3 class="team">Ольга Рєпіна</h3>
                 <p class="team-profession" lang="en">Frontend Developer</p>
             </li>
-            <li>
+            <li class="list">
                 <img src="./images/mykola-tarasov.jpg" alt="Микола Тарасов" width="270" height="260"/>
                 <h3 class="team">Микола Тарасов</h3>
                 <p class="team-profession" lang="en">Marketing</p>
             </li>
-            <li>
+            <li class="list">
                 <img src="./images/mychaylo-jermakov.jpg" alt="Михайло Єрмаков" width="270" height="260"/>
                 <h3 class="team">Михайло Єрмаков</h3>
                 <p class="team-profession" lang="en">UI Designer</p>
