--- a/portfolio.html
+++ b/portfolio.html
@@ -32,6 +32,7 @@
     </header>
 
     <main>
+        <section class="projects">
             <h1 class="visually-hidden">Сторінка Портфоліо</h1>
             <ul class="list">
                 <li><button class="button" type="button">Усі</button></li>
@@ -50,8 +51,8 @@
                 </li>
                 <li>
                     <a class="link" href="#" target="_blank" rel="noreferrer noopener noopenet">
-                        <img src="./images/poster-new-orlean-vs-golden-star.jpg" alt="Постер New Orlean vs Golden Star"
-                            width="370" height="294">
+                        <img src="./images/poster-new-orlean-vs-golden-star.jpg" alt="Постер New Orlean vs Golden Star" width="370"
+                            height="294">
                         <h2 class="name-project">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                         <p class="type-project">Дизайн</p>
                     </a>
@@ -107,6 +108,7 @@
                     </a>
                 </li>
             </ul>
+        </section>
     </main>
     
     <footer>
