--- a/index.html
+++ b/index.html
@@ -137,8 +137,7 @@
                 href="https://goo.gl/maps/JmQGZZptx1eftx2k7"
                 target="_blank"
                 rel="noreferrer noopener noopenet"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
+                >м. Київ, пр-т Лесі Українки, 26</a>
             </li>
             <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
